--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
 		<link rel="stylesheet" href="./css/header.css" />
 		<link
 			rel="shortcut icon"
-			href="https://hub.koneko.link/cdn/icons/blue.png"
+			href="https://hub.koneko.link/cdn/icons/purple.png"
 			type="image/x-icon"
 		/>
-		<title>neko watch ^-^</title>
+		<title>NekoWatch</title>
 	</head>
 	<body style="width: 100%; height: 100%">
 		<div class="header">
