did the good woohoo

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
 	</head>
 	<body style="width: 100%; height: 100%">
 		<div class="header">
-			<a href="." class="logo"
-				>NekoWatch<span style="color: dodgerblue">;</span></a
+			<a href="http://track.koneko.link/login?callback=http://localhost:3000/login/callback" class="logo"
+				>NekoWatch<span style="color: purple">;</span></a
 			>
 			<div class="header-right">
 				<a style="margin: 0; padding: 6px; display: none" id="top-search">
