--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 	</head>
 	<body style="width: 100%; height: 100%">
 		<div class="header">
-			<a href="http://track.koneko.link/login?callback=http://localhost:3000/login/callback" class="logo"
+			<a href="/" class="logo"
 				>NekoWatch<span style="color: purple">;</span></a
 			>
 			<div class="header-right">
@@ -30,6 +30,7 @@
 					</button>
 				</a>
 				<a href="http://track.koneko.link" class="track">Tracker</a>
+				<a href="http://track.koneko.link/login?callback=http://localhost:3000/login/callback" class="track" id="trackerlogin">Login</a>
 			</div>
 		</div>
 		<div class="main" style="height: 100%; width: 100%">
