fixed page not loading if anime has no alternative name

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 					</button>
 				</a>
 				<a href="http://track.koneko.link" class="track" style="display: block !important;">Tracker</a>
-					<a href="http://track.koneko.link/login?callback=http://watch.koneko.link/login/callback" class="track" id="trackerlogin" style="display: block !important;">Login</a>
+					<a href="/login" class="track" id="trackerlogin" style="display: block !important;">Login</a>
 			</div>
 		</div>
 		<div class="main" style="height: 100%; width: 100%">
