--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 			href="https://hub.koneko.link/cdn/icons/purple.png"
 			type="image/x-icon"
 		/>
-		<title>NekoWatch</title>
+		<title>Main | NekoWatch</title>
 	</head>
 	<body style="width: 100%; height: 100%">
 		<div class="header">
